fix: font-awesome and file icon alignment in quickopen

--- a/packages/monaco/src/browser/style/index.css
+++ b/packages/monaco/src/browser/style/index.css
@@ -25,17 +25,13 @@
 }
 
 /*
- * we need to disable the background image when using font awesome icons
+ * we need to disable the background image when using font awesome icons and file-icons
  */
-.monaco-quick-open-widget .quick-open-tree .quick-open-entry .quick-open-entry-icon.fa {
-    background-image: none;
-    margin-right: 0px;
-}
-
-/*
- * we need to disable the background image when using file-icons
- */
+.monaco-quick-open-widget .quick-open-tree .quick-open-entry .quick-open-entry-icon.fa,
 .monaco-quick-open-widget .quick-open-tree .quick-open-entry .quick-open-entry-icon.file-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: none;
     margin-right: 0px;
 }
